[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certilayer"
version = "1.0.0"
description = "CertiLayer behavioral biometrics SDK for Python — verify human sessions server-side in 3 lines."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["certilayer", "biometrics", "bot-detection", "fraud", "security"]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=certilayer --cov-report=term-missing --cov-fail-under=80"

[tool.setuptools.packages.find]
where = ["."]
include = ["certilayer*"]
